<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Login Counter</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add User</string>
    <string name="u_box">Username</string>
    <string name="p_box">Password</string>
    <string name="welcome_message">Please enter your credentials below:</string>
    <string name="SuccessMessage">SuccessMessage</string>
    <string name="logout_box">Logout</string><string name="login_button">Login</string>

</resources>