<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"

    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/p_box"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="39dp"
        android:text="@string/login_button"
        android:onClick="login"/>

    <Button
        android:id="@+id/AddUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Login"
        android:layout_alignBottom="@+id/Login"
        android:layout_alignRight="@+id/password"
        android:text="@string/add"
        android:onClick="addUser"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/msg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/u_box" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textColor="#FFFFFF"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignRight="@+id/username"
        android:layout_alignEnd="@+id/username" />

</RelativeLayout>